--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Экран ввода кода -->
   <div class="glitch-input-wrapper">
     <div class="input-container">
-      <input type="text" id="access-code" class="holo-input" placeholder="" required />
+      <input type="password" id="access-code" class="holo-input" placeholder="" required />
       <label for="access-code" class="input-label" data-text="ACCESS_CODE">ACCESS_CODE</label>
       <div class="input-border"></div>
       <div class="input-scanline"></div>
