--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
 		<p>Python версии 3.13 (Поддерживает почти все библиотеки в том числе встроенную библиотеку tkinter для gui)</p>
 		<a href="https://www.python.org/ftp/python/3.13.5/python-3.13.5-amd64.exe" target="_blank">Скачать</a>
 	  </div>
+	<div class="tool-card">
+		<h3>VMware Workstation 17 Pro</h3>
+		<p>Программа для виртуальных машин (ПК) от VMware</p>
+		<a href="https://5mc2yl.soft-load.eu/b6/6/4/8d93ca35692337d9caa3847f55beacc4/VMware-workstation-full-17.6.4-24832109.exe" target="_blank">Скачать</a>
+	  </div>
+	<div class="tool-card">
+		<h3>Virtual Box v7.2.0</h3>
+		<p>Программа для виртуальных машин (ПК) от Oracle</p>
+		<a href="https://download.virtualbox.org/virtualbox/7.2.0/VirtualBox-7.2.0-170228-Win.exe" target="_blank">Скачать</a>
+	  </div>
     </div>
   </div>
 
